Prevent front page from squishing on mobile

--- a/mobile.css
+++ b/mobile.css
@@ -52,7 +52,7 @@
         display: none;
     }
     #mlhBanner {
-        top: 65px;
+        top: 67px;
         width: 78px;
         height: 139px;
         right: 1px;
