--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
     font-weight: bold;
     overflow: hidden;
     overflow-y: scroll;
+    min-height: 550px;
 }
 section {
     width: 100%;
